--- a/RdlcReportHeaderExample/RdlcReportHeaderExample.csproj
+++ b/RdlcReportHeaderExample/RdlcReportHeaderExample.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{BDE7BECE-42F4-480E-AA9E-F7E938083FB1}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RdlcReportExample</RootNamespace>
-    <AssemblyName>RdlcReportExample</AssemblyName>
+    <RootNamespace>RdlcReportHeaderExample</RootNamespace>
+    <AssemblyName>RdlcReportHeaderExample</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -66,7 +66,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Report1.rdlc" />
+    <EmbeddedResource Include="Report1.rdlc">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +77,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\DataSources\Product.datasource" />
     <None Include="Properties\Settings.settings">
